src/definitions/modules/dropdown.less
/* ... */
/* Clearable Selection */
.ui.dropdown > .remove.icon {
  cursor: pointer;
  font-size: @dropdownIconSize;
  margin: @selectionIconMargin;
  padding: @selectionIconPadding;
  right: 3em;
  top: @selectionVerticalPadding;
  position: absolute;
  opacity: 0.6;
  z-index: @selectionIconZIndex;
}

.ui.clearable.dropdown .text,
.ui.clearable.dropdown a:last-of-type {
  margin-right: 1.5em;
}

.ui.dropdown select.noselection ~ .remove.icon,
.ui.dropdown input[value=''] ~ .remove.icon,
.ui.dropdown input:not([value]) ~ .remove.icon,
.ui.dropdown.loading > .remove.icon {
  display: none;
}

& when (@variationDropdownMultiple) {
  /*--------------
      Multiple
  ---------------*/

  /* Multiple Selection */
  .ui.ui.multiple.dropdown {
    padding: @multipleSelectionPadding;
  }
  .ui.multiple.dropdown .menu {
    cursor: auto;
  }

  /* Selection Label */
  .ui.multiple.dropdown > .label {
    display: inline-block;
    white-space: normal;
    font-size: @labelSize;
    padding: @labelPadding;
    margin: @labelMargin;
    box-shadow: @labelBoxShadow;
  }

  /* Dropdown Icon */
  .ui.multiple.dropdown .dropdown.icon {
    margin: @multipleSelectionDropdownIconMargin;
    padding: @multipleSelectionDropdownIconPadding;
  }

  /* Text */
  .ui.multiple.dropdown > .text {
    position: static;
    padding: 0;
    max-width: 100%;
    margin: @multipleSelectionChildMargin;
    line-height: @multipleSelectionChildLineHeight;
  }
  .ui.multiple.dropdown > .label ~ input.search {
    margin-left: @multipleSelectionSearchAfterLabelDistance !important;
  }
  .ui.multiple.dropdown > .label ~ .text {
    display: none;
  }
  .ui.multiple.dropdown > .label:not(.image) > img:not(.centered) {
    margin-right: @itemElementDistance;
  }
  .ui.multiple.dropdown > .label:not(.image) > img.ui:not(.avatar) {
    margin-bottom: @itemElementBottomDistance;
  }
  .ui.multiple.dropdown > .image.label img {
    margin: @imageLabelImageMargin;
    height: @imageLabelHeight;
  }

  & when (@variationDropdownSearch) {
    /*-----------------
      Multiple Search
    -----------------*/

    /* Multiple Search Selection */
    .ui.multiple.search.dropdown,
    .ui.multiple.search.dropdown > input.search {
      cursor: text;
    }

    /* Prompt Text */
    .ui.multiple.search.dropdown > .text {
      display: inline-block;
      position: absolute;
      top: 0;
      left: 0;
      padding: inherit;
      margin: @multipleSelectionChildMargin;
      line-height: @multipleSelectionChildLineHeight;
    }

    .ui.multiple.search.dropdown > .label ~ .text {
      display: none;
    }

    /* Search */
    .ui.multiple.search.dropdown > input.search {
      position: static;
      padding: 0;
      max-width: 100%;
      margin: @multipleSelectionChildMargin;
      width: @multipleSelectionSearchStartWidth;
      line-height: @multipleSelectionChildLineHeight;
    }

    .ui.multiple.search.dropdown.button {
      min-width: @selectionMinWidth;
    }
  }
}

& when (@variationDropdownInline) {
  /*--------------
       Inline
  ---------------*/

  .ui.inline.dropdown {
    cursor: pointer;
    display: inline-block;
    color: @inlineTextColor;
  }
  .ui.inline.dropdown .dropdown.icon {
    margin: @inlineIconMargin;
    vertical-align: baseline;
  }
  .ui.inline.dropdown > .text {
    font-weight: @inlineTextFontWeight;
  }
  .ui.inline.dropdown .menu {
    cursor: auto;
    margin-top: @inlineMenuDistance;
    border-radius: @inlineMenuBorderRadius;
  }
}


/*******************************
            States
*******************************/


/*--------------------
        Active
----------------------*/

/* Menu Item Active */
.ui.dropdown .menu .active.item {
  background: @activeItemBackground;
  font-weight: @activeItemFontWeight;
  color: @activeItemColor;
  box-shadow: @activeItemBoxShadow;
  z-index: @activeItemZIndex;
}


/*--------------------
        Hover
----------------------*/

/* Menu Item Hover */
.ui.dropdown .menu > .item:hover {
  background: @hoveredItemBackground;
  color: @hoveredItemColor;
  z-index: @hoveredZIndex;
}

/*--------------------
     Default Text
----------------------*/

.ui.dropdown:not(.button) > .default.text,
.ui.default.dropdown:not(.button) > .text {
  color: @defaultTextColor;
}
.ui.dropdown:not(.button) > input:focus ~ .default.text,
.ui.default.dropdown:not(.button) > input:focus ~ .text {
  color: @defaultTextFocusColor;
}

& when (@variationDropdownLoading) {

  /*--------------------
         Loading
  ---------------------*/

  .ui.loading.dropdown > i.icon {
    height: @relative14px !important;
  }
  .ui.loading.selection.dropdown > i.icon {
    padding: @relative21px @relative18px !important;
  }
  .ui.loading.dropdown > i.icon:before {
    position: absolute;
    content: '';
    top: 50%;
    left: 50%;

    margin: @loaderMargin;
    width: @loaderSize;
    height: @loaderSize;

    border-radius: @circularRadius;
    border: @loaderLineWidth solid @loaderFillColor;
  }
  .ui.loading.dropdown > i.icon:after {
    position: absolute;
    content: '';
    top: 50%;
    left: 50%;
    box-shadow: 0 0 0 1px transparent;

    margin: @loaderMargin;
    width: @loaderSize;
    height: @loaderSize;

    animation: loader @loaderSpeed infinite linear;
    border: @loaderLineWidth solid @loaderLineColor;
    border-radius: @circularRadius;

  }

  /* Coupling */
  .ui.loading.dropdown.button > i.icon:before,
  .ui.loading.dropdown.button > i.icon:after {
    display: none;
  }

  .ui.loading.dropdown > .text {
    transition: none;
  }

  /* Used To Check Position */
  .ui.dropdown .loading.menu {
    display: block;
    visibility: hidden;
    z-index: @loadingZIndex;
  }
  .ui.dropdown > .loading.menu {
    left: 0 !important;
    right: auto !important;
  }
  .ui.dropdown > .menu .loading.menu {
    left: 100% !important;
    right: auto !important;
  }
}
/* ... */

